@@ -416,7 +416,7 @@ AHIGetELFSymbol( const char* name,
 
 /* See the header file for macros */
 
-#if !defined( WORDS_BIG_ENDIAN )
+#if !defined( WORDS_BIGENDIAN )
 
 static UWORD
 EndianSwapUWORD( UWORD x ) {
